# hh-mcp

./: .gitignore  .mcp.json.example  Dockerfile  README.md  docker-compose.yml  hh_mcp_server.py  profile.example.json  pyproject.toml  requirements.txt
