[project]
name = "hh-mcp"
version = "0.1.0"
description = "MCP сервер для автоматизации поиска работы на hh.ru"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "hh-applicant-tool>=1.5.13",
    "httpx>=0.27.0",
    "playwright>=1.57.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40.0",
]

[project.scripts]
hh-mcp = "hh_mcp_server:mcp.run"

[tool.uv]
dev-dependencies = []
